--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>EXTREME CHECKERS</title>
     <link rel="stylesheet" type="text/css" href="/css/style.css" />
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
+    <link href="https://fonts.googleapis.com/css?family=Nova+Square" rel="stylesheet" />
   </head>
   <body>
     <header></header>
