--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
     <main></main>
     <footer></footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="js/checkers.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+    <script src="js/game-objects.js"></script>
+    <script src="js/script.js"></script>
+    <script src="js/build-game.js"></script>
+    <script src="js/game-events.js"></script>
   </body>
 </html>
