--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>EXTREME CHECKERS</title>
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
+    <link rel="stylesheet" href="node_modules/jquery-modal/jquery.modal.css" type="text/css" media="screen" />
     <link href="https://fonts.googleapis.com/css?family=Nova+Square" rel="stylesheet" />
   </head>
   <body>
@@ -13,6 +14,7 @@
     <footer></footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+    <script src="node_modules/jquery-modal/jquery.modal.min.js" type="text/javascript" charset="utf-8"></script>
     <script src="js/game-objects.js"></script>
     <script src="js/script.js"></script>
     <script src="js/build-game.js"></script>
