--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.8.2/jquery.modal.min.js"></script>
     <script src="js/game-objects.js"></script>
-    <script src="js/script.js"></script>
-    <script src="js/build-game.js"></script>
-    <script src="js/game-events.js"></script>
+    <script src="js/game-functions.js"></script>
+    <script src="js/gameboard.js"></script>
+    <script src="js/IIFE.js"></script>
   </body>
 </html>
